# sonic-night-light

./: .clang-format  .gitignore  .kde-ci.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/daemon/: org.kde.knighttimed.desktop.in
